--- a/aspectj/build.gradle
+++ b/aspectj/build.gradle
@@ -8,16 +8,12 @@ repositories {
     jcenter()
 }
 
-
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
 dependencies {
     //gradle sdk
     implementation gradleApi()
     //groovy sdk
     implementation localGroovy()
-    compile 'com.android.tools.build:gradle:3.0.1'
+    implementation 'com.android.tools.build:gradle:3.0.1'
     implementation 'org.aspectj:aspectjtools:1.8.10'
 }
 
@@ -26,7 +22,7 @@ version = '1.0.0'
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: uri('E:/liuhao/Android/repos'))
+            repository(url: uri('F:/Android/repos'))
         }
     }
 }
