--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url uri('F:/Android/repos')
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'leon.android.plugins:aspectj:1.0.0'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +24,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url uri('F:/Android/repos')
+        }
     }
 }
 
