--- a/aspectj/build.gradle
+++ b/aspectj/build.gradle
@@ -22,7 +22,7 @@ version = '1.0.0'
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: uri('F:/Android/repos'))
+            repository(url: uri(LOCAL_REPOS))
         }
     }
 }
