--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
     }
 }
 
+aspectjOptions {
+    includeJars 'android.arch.lifecycle'
+    ajcArgs '-nowarn'
+    excludeJars 'appcompat'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
