--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,20 @@
 buildscript {
     
     repositories {
+        apply from: 'versions.gradle'
         google()
         jcenter()
         mavenCentral()
         maven {
-            url uri(LOCAL_REPOS)
+            url uri(LOCAL_ANDROID_REPOS)
         }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        //自动化jcenter打包插件
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        //自动化maven打包插件
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath 'leon.android.plugins:aspectj:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,7 +30,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven {
-            url uri(LOCAL_REPOS)
+            url uri(LOCAL_ANDROID_REPOS)
         }
     }
 }
