--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         //自动化maven打包插件
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-        classpath 'leon.android.plugins:aspectj:1.0.0'
+        classpath 'leon.android.plugins:aspectj-plugin:1.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
